# HW1

./: README.md  container.cpp  container.h  main.cpp  parallelepiped.h  sphere.cpp  sphere.h  task.txt  tetrahedron.h
homework1/: container.h
homework2/: CMakeLists.txt  container.cpp  container.h  main.cpp  parallelepiped.cpp  parallelepiped.h  shape.cpp  shape.h  sphere.cpp  sphere.h  task.txt  tetrahedron.cpp  tetrahedron.h
homework2/tests/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
homework3/: container.py  main.py  parallelepiped.py  sphere.py  tetrahedron.py  utils.py  Пояснительная записка.txt
homework3/tests/: test3.txt  test6.txt
homework4/: data.h  extdata.h  input.c  inrnd.c  main.c  makefile  output.c  surfaceArea.asm  surfaceArea.lst  task  Пояснительная записка.docx
homework4/tests/: test1.txt  test2.txt  test4.txt  test5.txt
homework5/: CMakeLists.txt  captainSilver.cpp  captainSilver.h  groupOfPirates.cpp  groupOfPirates.h  main.cpp  map.cpp  map.h  Пояснительная записка.docx
homework5/results/: result1.txt  result2.txt  result3.txt  result4.txt  result5.txt
homework5/tests/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
hw1/: CMakeLists.txt  container.cpp  parallelepiped.cpp  shape.cpp  shape.h  tetrahedron.cpp
hw1/tests/: test1.txt  test2.txt  test5.txt
tests/: test3.txt  test4.txt
